[package]
name = "amyst-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI y REPL del lenguaje Amyst"

[[bin]]
name = "amyst"
path = "src/main.rs"

[dependencies]
amyst-core = { path = "../amyst-core" }
clap = { version = "4.6.3", features = ["derive"] }
